Exemplo de thymeleaf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=50
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/dbFeira
+spring.datasource.url=jdbc:postgresql://localhost:5432/dbfeiraonline
 spring.datasource.username=postgres
 spring.datasource.password=123456
 
