--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.initialization-mode=always
 spring.jpa.open-in-view=true
+
+
+spring.thymeleaf.cache=false
